<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="40dp"
    android:background="@android:color/white"
    android:paddingStart="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/grade_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_1_0"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_1_25"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_1_25"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_1_5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_1_5"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_1_75"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_1_75"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_2_0"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/grade_2_25"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_2_25"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_2_5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_2_5"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_2_75"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_2_75"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_3_0"
            android:textAlignment="gravity" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/grade_5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/grade_value_5_0"
            android:textAlignment="gravity" />
    </LinearLayout>
</LinearLayout>