<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="15dp"
    android:paddingEnd="40dp"
    android:background="@android:color/white"
    android:paddingStart="40dp"
    android:paddingTop="15dp">

    <TextView
        android:id="@+id/units_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/units_value_1"
        android:textAlignment="gravity" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/units_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/units_value_2"
        android:textAlignment="gravity" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/units_3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/units_value_3"
        android:textAlignment="gravity" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/units_4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/units_value_4"
        android:textAlignment="gravity" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/units_5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/units_value_5"
        android:textAlignment="gravity" />
</LinearLayout>