<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.djacoronel.gwacalculator.view.MainActivity">

  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <include
      android:id="@+id/include"
      layout="@layout/gwa_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/colorPrimaryText"
        app:tabTextColor="@color/colorPrimaryText"/>

      <TextView
        android:id="@+id/message"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_tabs_message"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>
    </FrameLayout>

  </android.support.design.widget.AppBarLayout>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
      android:id="@+id/tiger_no_sems"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/tiger"
      android:layout_gravity="center"
      android:drawablePadding="16dp"
      android:text="@string/start_message"/>

    <TextView
      android:id="@+id/tiger_no_course"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/tiger"
      android:layout_gravity="center"
      android:drawablePadding="16dp"
      android:visibility="invisible"
      android:text="@string/no_course_message"/>

    <android.support.v4.view.ViewPager
      android:id="@+id/viewpager"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

  </FrameLayout>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:layout_gravity="bottom|end"
    android:src="@drawable/ic_add"/>

  <com.google.android.gms.ads.AdView
    android:id="@+id/main_adView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    app:adSize="BANNER"
    app:adUnitId="@string/gwa_ad_main"/>

</android.support.design.widget.CoordinatorLayout>
